tests/errors/undefined-ingredient.chef
Undefined Ingredient Test.

This recipe tries to use an ingredient that was never declared.

Ingredients.
100 g flour

Method.
Put sugar into mixing bowl.
Fold flour into mixing bowl.

Serves 1.
